apply requested changes
-Remove unused imports
-Fix formatting
-Use constants
-aggregate nested if statements
-use EnumMap where fitting