@@ -1,5 +1,6 @@
 package com.gepardec.mega.zep.rest.mapper;
 
+import java.util.Collections;
 import java.util.List;
 import java.util.Objects;
 import java.util.stream.Collectors;
@@ -10,11 +11,11 @@ public interface Mapper <D, T>{
 
     default List<D> mapList(List<T> tList) {
         if (tList == null)
-            return null;
+            return Collections.emptyList();
 
         return tList.stream()
                 .map(this::map)
                 .filter(Objects::nonNull)
-                .collect(Collectors.toList());
+                .toList();
     }
 }
